# octart

./: CMakeLists.txt  README.md  main.cpp
include/: config.h  crc32.h  frame.h  tcp_receiver.h  tcp_sender.h
include/interfaces/: receiver_int.h  sender_int.h
src/: test_main.cpp
src/receiver/: server.cpp
src/sender/: send.cpp
